--- a/public/global.css
+++ b/public/global.css
@@ -89,6 +89,13 @@ pre {
   color: #585050 !important;
 }
 
+.instruction {
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
 button {
   color: black;
   padding: 16px;
@@ -138,4 +145,9 @@ button {
   font-weight: normal;
   padding-left: 25px;
   padding-right: 0;
+}
+
+#button-col {
+  overflow: scroll;
+  padding-bottom: 30px;
 }
